--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<artifactId>Welcome-DevOps</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 
-	<name>Spring-Petclinic</name>
+	<name>spring-petclinic</name>
 	<packaging>war</packaging>
 
 	<properties>
