--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,11 @@
 
 	<name>spring-petclinic</name>
 	<packaging>war</packaging>
-
+	<configuration>
+		<serverId>nexus</serverId>
+		<nexusUrl>http://localhost:8081/nexus/</nexusUrl>
+	</configuration>
+	
 	<distributionManagement>
 		<snapshotRepository>
 		<id>nexus-snapshots</id>
